<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/nav_contacts" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_donate"
            android:title="@string/nav_donate" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_events"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_volunteer"
            android:icon="@drawable/group"
            android:title="@string/nav_volunteer" />

        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/ic_nutrition"
            android:title="@string/nav_nutrition" />

        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_video"
            android:title="Educational Videos" />

        <item
            android:id="@+id/nav_remembrance_wall"
            android:icon="@drawable/ic_rememberance"
            android:title="Rememberance Wall" />

        <!-- Admin section - will be shown/hidden programmatically -->
        <item
            android:id="@+id/nav_admin_dashboard"
            android:icon="@drawable/ic_admin"
            android:title="Admin Dashboard"
            android:visible="false" />

        <item
            android:id="@+id/nav_admin_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Admin Logout"
            android:visible="false" />

    </group>
</menu>
